Update some domments

--- a/cv.tex
+++ b/cv.tex
@@ -1,8 +1,21 @@
-\documentclass[12pt]{article}
+\documentclass[11pt,a4paper]{moderncv}
+\moderncvstyle{casual}
+
 \begin{document}
+
+% Add your profile information here
 \section*{Profile}
+
+% Add your work experience here
 \section*{Work}
+
+% Add your skills here
 \section*{Skills}
+
+% Add your projects here
 \section*{Projects}
+
+% Add your education details here
 \section*{Education}
+
 \end{document}
